# botonaro

./: .gitignore  CHANGES.txt  MANIFEST.in  Pipfile  README.markdown  deploy.bash  requirements.txt  setup.cfg  setup.py
doc/: index.css  index.html  index.js
src/botonaro/: __main__.py  _version.py
src/instance/: _bots.py
src/instance/bots/: botonaro.py
src/instance/personalidades/: custom.py
src/instance/personalidades/custom/: __init__.py  buscamemo.py  handlers.py  natural.py
