[metadata]
name = botonaro
version = v0.0.5
description = Chatbot com dados do Bolsodata/Metamemo
summary = Chatbot com dados do Bolsodata/Metamemo
author = Iuri Guilherme
author_email = 2027447+iuriguilherme@users.noreply.github.com
maintainer = Iuri Guilherme
maintainer_email = 2027447+iuriguilherme@users.noreply.github.com
home_page = https://botonaro.iuri.xyz/
url = https://botonaro.iuri.xyz/
project_urls =
    Source Code = https://github.com/iuriguilherme/botonaro
    Issue Tracker = https://github.com/iuriguilherme/botonaro/issues
long_description = file: README.markdown
long_description_content_type = text/markdown
license = CC-4.0-BY-SA
license_files =
    LICENSE.markdown
description_file =
    README.markdown
    LICENSE.markdown
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: Creative Commons 4.0 Attribution Share Alike (CC-4.0-BY-SA)
    Natural Language :: Portuguese (Brazilian)
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Communications
    Topic :: Communications :: Chat
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artifical Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
#packages = find:
packages =
    botonaro
    instance
package_dir = = src
include_package_data = True
zip_safe = False

[options]
#packages = find:
packages =
    botonaro
    instance
package_dir = = src
install_requires =
    pydantic[dotenv]
dependency_links =
    iacecil @ git+https://github.com/iuriguilherme/iacecil.git@stable#egg=iacecil
include_package_data = True
python_requires = >= 3.10

[files]
packages = find:
package_dir = = src
extra_files =
    LICENSE.markdown
    README.markdown

